# talos-metapkg-ros-control-sot

./: .git-blame-ignore-revs  .gitlab-ci.yml  .gitmodules  README.md
metapkg_talos_roscontrol_sot/: CMakeLists.txt  package.xml
roscontrol_sot_talos/: CMakeLists.txt  package.xml
roscontrol_sot_talos/config/: pids_effort.yaml  sot_talos_controller.yaml  sot_talos_params.yaml  sot_talos_params_control_mode.yaml  sot_talos_params_control_mode_effort.yaml  sot_talos_params_effort.yaml  sot_talos_params_gazebo.yaml  sot_talos_params_gazebo_effort.yaml
roscontrol_sot_talos/launch/: display_sot.launch  sot_talos_controller.launch  sot_talos_controller_effort.launch  sot_talos_controller_gazebo.launch  sot_talos_controller_gazebo_effort.launch
roscontrol_sot_talos/scripts/: republish  start_talos_gazebo.py  start_talos_gazebo_16_04.py
sot_pyrene_bringup/: CMakeLists.txt  package.xml
sot_pyrene_bringup/launch/: geometric_simu.launch  geometric_simu_context.launch  geometric_simu_pyrene.launch
sot_pyrene_bringup/sot/: pyrene.yaml
talos_metapkg_ros_control_sot/: CMakeLists.txt  package.xml
talos_roscontrol_sot/: CMakeLists.txt  package.xml
talos_roscontrol_sot/config/: gazebo_roscontrol_sot_controller_plugins.xml  roscontrol_sot_controller_plugins.xml
talos_roscontrol_sot/launch/: sot_controller_gazebo.launch
talos_roscontrol_sot/src/: log.cpp  log.hh  roscontrol-sot-controller.cpp  roscontrol-sot-controller.hh
talos_roscontrol_sot_talos/: CMakeLists.txt  package.xml
talos_roscontrol_sot_talos/config/: sot_talos_controller.yaml  sot_talos_params.yaml  sot_talos_params_effort.yaml  sot_talos_params_gazebo.yaml  sot_talos_params_gazebo_effort.yaml
talos_roscontrol_sot_talos/launch/: sot_talos_controller.launch  sot_talos_controller_effort.launch  sot_talos_controller_gazebo.launch  sot_talos_controller_gazebo_effort.launch
talos_roscontrol_sot_talos/scripts/: republish.py
