<package>
  <name>metapkg_talos_roscontrol_sot</name>
  <version>0.0.1</version>
  <description>A set of packages that include sot-wrapper and talos sot params .</description>

  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/stack-of-tasks/roscontrol_sot</url>

  <author>Olivier Stasse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>talos_roscontrol_sot</run_depend>
  <run_depend>talos_roscontrol_sot_talos</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>control_toolbox</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
